# ifort_dll_tests

./: README.md  TWICE_call.f90  TWICE_call.vfproj  TWICE_call_cpp.cpp  TWICE_call_cpp.vcxproj  TWICE_dll.f90  TWICE_dll.vfproj  fortran_null_array.txt  ifort64_c++.paramers.transfer.txt  ifort_dll_tests.sln
FortranTest/: FortranTest.f90  FortranTest.vfproj
ifort_cmake/0ifort_cmd_run/: ifort_run.bat  readme.txt  test.f90  test_compile.bat
ifort_cmake/1CMake_ifort_msvc/: CMakeLists.txt  _build_common.bat  hello.f90  worknotes.txt
ifort_cmake/2lapack_test/: CMakeLists.txt  _build_common.bat  run.bat  test.c  worknotes.txt
ifort_cmake/3mixed_CXX_Fortran/: CMakeLists.txt  _build_common.bat  build_D.bat  build_R.bat
ifort_cmake/Tutorial/: worknotes.txt
